# key-value-db

./: Cargo.toml  LICENSE.md  README.md
db_client/: Cargo.toml
db_server/: Cargo.toml
db_server/src/: error.rs  main.rs  types.rs
db_server/src/functions/: mod.rs
db_server/src/functions/command/: command.rs  get_authorize_command.rs  mod.rs
db_server/src/functions/crypto/: b58_sha256.rs  ed25519_verify.rs  generate_first_master.rs  mod.rs  util.rs
db_server/src/functions/db/: get.rs  mod.rs  set.rs
db_server/src/functions/lex/: get_authority.rs  get_message.rs  get_signature.rs  join.rs  mod.rs  split.rs
